# aliens-vs-suburbia

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  credits.txt  editor.ron  game-settings.ron  player-settings.ron
assets/: _fab.bbmodel  ball_fab.bbmodel  ball_fab.glb  car_house.scn.ron  car_house_2.scn.ron  explorer.scn.ron  floor-laminate-1.scn.ron  floor_fab.bbmodel  floor_fab.glb  floor_laminate_1.glb  girl.scn.ron  girl_fini.scn.ron  girl_fini_2.scn.ron  hazmat.scn.ron  house.scn.ron  mp5.scn.ron  player.bbmodel  player.glb  player.gltf  poly_pizza_library.json  room_fab.bbmodel  small_floor_fab.bbmodel  solar_punk.scn.ron  toilet.scn.ron  wall_east.glb  wall_fab.bbmodel  wall_fab.glb  wall_north.glb  wall_south.glb  wall_west.glb
assets/aliens/: animated_spider.glb
assets/defs/: Alien.ron  Alpaking Evolved.ron  Alpaking.ron  Barrier Fixed.ron  Barrier Large.ron  Barrier Single.ron  Barrier Trash.ron  Blue Demon.ron  Brick Wall-GhSmk5IA5i.ron  Bunny.ron  Character Enemy.ron  Character Hazmat.ron  Character Soldier.ron  Demon-LnfIziKv4o.ron  Rig_Medium_General.ron  Rig_Medium_Tools.ron
assets/girl/: blender_assets.cats.txt~  girl-only.glb  girl_prefab.scn.ron  girl_prefab_2.scn.ron
assets/levels/: ground_level.scn.ron  house_1.glb  level_test.scn.ron  solar_level.scn.ron  solar_punk_village.scn.ron
assets/map/: floor_small.glb  obstacle.bbmodel  obstacle.glb  tower_balls.bbmodel  tower_balls.glb  wall_small.bbmodel  wall_small.glb
assets/maps/: level_01.ron
assets/models/: Adventurer-settings.ron  King.glb
assets/new/: low_poly_trees.glb
assets/poly.pizza-api/: v1.1.yaml
assets/quaternius/: alien.glb  alien_rotated.glb  astronaut_rotated.glb  attributions.txt
assets/shaders/: sprite_billboard.wgsl
assets/space_editor_stuff/: fighter_prefab.scn.ron  level.scn.ron  level_floor.scn.ron  physics_loading_test.scn.ron  physics_object.scn.ron  solar_level.scn.ron  test.scn.ron  (+2 more)
docs/: A Game Feature.md  About the Game.md  building-levels.md  game-design-doc.md  polypizza-roadmap.md  roadmap.md  ui-refactoring.md
src/: alien_plugin.rs  build_mode_plugin.rs  camera_plugin.rs  constants.rs  control_plugin.rs  main.rs  map_plugin.rs  type_register_plugin.rs
(+2513 files in other folders)
