[package]
name = "aliens-vs-suburbia"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18", features = ["wayland"] }
avian3d = { version = "0.6", default-features = false, features = ["3d", "parry-f32", "debug-plugin", "collider-from-mesh", "simd", "parallel"] }
rand_chacha = "0.3.1"
flagset = "0.4.4"
serde = "1.0"
serde_json = "1.0"
pathfinding = "4.6"
itertools = "0.12"
bevy_mod_outline = "0.12"
bevy-inspector-egui = "0.36"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
