[package]
name = "aliens-vs-suburbia"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18", features = ["wayland", "3d", "ui", "experimental_bevy_feathers"] }
avian3d = { version = "0.6", default-features = false, features = ["3d", "parry-f32", "debug-plugin", "collider-from-mesh", "simd", "parallel", "serialize", "bevy_scene", "bevy_picking", "xpbd_joints"] }
flagset = "0.4.4"
pathfinding = "4.6"
itertools = "0.12"
bevy_mod_outline = "0.12"
bevy-inspector-egui = "0.36"
lava_ui_builder = { path = "lava_ui_builder" }
jackdaw = { path = "jackdaw" }
serde = { version = "1", features = ["derive"] }
ron = "0.8"

# Enable max optimizations for dependencies, but not for our code:h
[profile.dev.package."*"]
opt-level = 3
